[gd_scene load_steps=7 format=2]

[ext_resource path="res://Modules/Games/Questionnaire/Add Questionnaire/AddQuestionnaire.gd" type="Script" id=1]
[ext_resource path="res://Assets/Fonts/joystix monospace.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[node name="AddQuestion" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="UserLabel" type="Label" parent="."]
margin_right = 160.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 4 )
text = "User"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -194.0
margin_bottom = 194.0
custom_constants/separation = 32

[node name="Question" type="LineEdit" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Pertanyaan?"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 1024.0
margin_bottom = 260.0
alignment = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 23.0
margin_right = 827.0
margin_bottom = 132.0

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 804.0
margin_bottom = 132.0
columns = 2

[node name="Answer" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_right = 400.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Jawaban 1"

[node name="Answer2" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_left = 404.0
margin_right = 804.0
margin_bottom = 64.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Jawaban 2"

[node name="Answer3" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_top = 68.0
margin_right = 400.0
margin_bottom = 132.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Jawaban 3"

[node name="Answer4" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2/GridContainer"]
margin_left = 404.0
margin_top = 68.0
margin_right = 804.0
margin_bottom = 132.0
rect_min_size = Vector2( 400, 64 )
custom_fonts/font = SubResource( 1 )
align = 1
placeholder_text = "Jawaban 4"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 831.0
margin_right = 1000.0
margin_bottom = 132.0
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 169.0
margin_bottom = 64.0

[node name="Answer" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 74.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
min_value = 1.0
max_value = 4.0
value = 1.0
align = 1

[node name="AnswerLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
margin_left = 78.0
margin_top = 22.0
margin_right = 169.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Jawaban"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 169.0
margin_bottom = 132.0

[node name="Berry" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 74.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
align = 1

[node name="BerryLabel" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_left = 78.0
margin_top = 22.0
margin_right = 143.0
margin_bottom = 42.0
custom_fonts/font = SubResource( 3 )
text = "Berry"

[node name="Confirm" type="Button" parent="VBoxContainer"]
margin_top = 292.0
margin_right = 1024.0
margin_bottom = 388.0
rect_min_size = Vector2( 0, 96 )
custom_fonts/font = SubResource( 2 )
text = "Konfirmasi"

[node name="Confirmation" type="AcceptDialog" parent="."]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Konfirmasi!"

[connection signal="tree_exited" from="." to="." method="_on_AddQuestion_tree_exited"]
[connection signal="pressed" from="VBoxContainer/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="about_to_show" from="Confirmation" to="." method="_on_Confirmation_about_to_show"]
[connection signal="confirmed" from="Confirmation" to="." method="_on_Confirmation_confirmed"]
